--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.15.0"
-avian3d = { version = "0.2", default-features = false, features = ["3d", "f64", "parry-f64"] }
+avian3d = "0.2.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
